Colaboratory를 통해 생성됨

--- a/4_다양한_분류_알고리즘.ipynb
+++ b/4_다양한_분류_알고리즘.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "4. 다양한 분류 알고리즘",
       "provenance": [],
-      "authorship_tag": "ABX9TyMDZL3yAMN9LQf+/BhQumC3",
+      "authorship_tag": "ABX9TyOTpjO9+WcLyVUGyv6wVpYD",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -164,6 +164,66 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sgO_N1IiPNhw"
+      },
+      "source": [
+        "#04-2 확률적 경사 하강법\n",
+        "import pandas as pd\n",
+        "fish = pd.read_csv(\"https://bit.ly/fish_csv_data\")\n",
+        "fish_input = fish[[\"Weight\", \"Length\", \"Diagonal\", \"Height\", \"Width\"]].to_numpy()\n",
+        "fish_target = fish[\"Species\"].to_numpy()\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "train_input, test_input, train_target, test_target = train_test_split(data, target, random_state = 42)\n",
+        "\n",
+        "from sklearn.preprocessing import StandardScaler\n",
+        "ss = StandardScaler()\n",
+        "ss.fit(train_input)\n",
+        "train_scaled = ss.transform(train_input)\n",
+        "test_scaled = ss.transform(test_input)\n",
+        "\n",
+        "from sklearn.linear_model import SGDClassifier\n",
+        "\n",
+        "sc = SGDClassifier(loss = 'log', max_iter = 10, random_state = 42)\n",
+        "sc.fit(train_scaled, train_target)\n",
+        "print(sc.score(train_scaled, train_target))\n",
+        "print(sc.score(test_scaled, test_target))\n",
+        "\n",
+        "#모델 이어서 훈련\n",
+        "sc.partial_fit(train_scaled, train_target)\n",
+        "print(sc.score(train_scaled, train_target))\n",
+        "print(sc.score(test_scaled, test_target))\n",
+        "\n",
+        "import numpy as np\n",
+        "sc = SGDClassifier(loss = 'log', random_state=42)\n",
+        "train_scored = []\n",
+        "test_scored = []\n",
+        "classes = np.unique(train_target)\n",
+        "\n",
+        "for _ in range(0, 300):\n",
+        "  sc.partial_fit(train_scaled, train_target, classes= classes)\n",
+        "  train_scored.append(sc.score(train_scaled, train_target))\n",
+        "  test_scored.append(sc.score(test_scaled, test_target))\n",
+        "\n",
+        "import matplotlib.pyplot as plt\n",
+        "plt.plot(train_scored)\n",
+        "plt.plot(test_scored)\n",
+        "plt.xlabel('epoch')\n",
+        "plt.ylabel('accuracy')\n",
+        "plt.show()\n",
+        "\n",
+        "#적합 epoch 100\n",
+        "sc = SGDClassifier(loss='log', max_iter = 100, tol = None, random_state=42)\n",
+        "sc.fit(train_scaled, train_target)\n",
+        "print(sc.score(train_scaled, train_target))\n",
+        "print(sc.score(test_scaled, test_target))\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
